Add specific versions of python libraries to ensure compatibility  and avoid version conflicts.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
 # Core libraries
-pandas
-requests
-plotly
-meteostat
+pandas==2.0.3
+requests==2.31.0
+plotly==5.18.0
+meteostat==1.6.5
+
+# Data processing and analysis
+numpy==1.24.4
 
 # App interface (optional, choose one)
-streamlit
+streamlit==1.24.0  # Use this for Streamlit apps
+# dash  # Use this instead if you prefer Dash for web apps
 # flask  # Use this instead if you prefer Flask for web apps
 
-# Dev tools
-black
-flake8
-isort
-mypy
-bandit
-pytest
-
 # Jupyter notebooks (optional, for exploration)
-notebook
+notebook==6.5.4
+jupyterlab==3.6.3
