--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   build-and-check:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11]
     steps:
       - name: 🔄 Checkout code
         uses: actions/checkout@v4
@@ -17,7 +19,14 @@ jobs:
       - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
+
+      - name: ⚡️ Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
 
       - name: 📦 Install dependencies
         run: |
@@ -25,6 +34,7 @@ jobs:
           source .venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt 
 
       - name: ⚫ Black - Code Formatter
         run: |
@@ -44,7 +54,11 @@ jobs:
       - name: 🧪 Pytest - Unit Tests
         run: |
           source .venv/bin/activate
-          pytest tests/
+          pytest --cov=src --cov-report=xml tests/
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3
+        with:
+          file: coverage.xml
 
       - name: 🔍 mypy - Type Checking
         run: |
