--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    workflow_dispatch:
 
 jobs:
   build-and-check:
@@ -33,8 +34,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt 
+          pip install -r requirements.txt -r requirements-dev.txt
 
       - name: ⚫ Black - Code Formatter
         run: |
