--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    workflow_dispatch:
 
 jobs:
-  build-and-check:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
+
     steps:
       - name: 🔄 Checkout code
         uses: actions/checkout@v4
@@ -20,52 +17,41 @@ jobs:
       - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: ⚡️ Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
+          python-version: '3.10'
 
       - name: 📦 Install dependencies
         run: |
           python -m venv .venv
           source .venv/bin/activate
           pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
+          pip install -r requirements.txt
 
-      - name: ⚫ Black - Code Formatter
+      - name: ⚫ Check formatting with black
         run: |
           source .venv/bin/activate
-          black --check .
+          black . --check
 
-      - name: 🧹 isort - Import Order
+      - name: 🧹 Check import order with isort
         run: |
           source .venv/bin/activate
           isort . --check-only
 
-      - name: 🔍 Flake8 - Linting
+      - name: 🔍 Lint with flake8
         run: |
           source .venv/bin/activate
           flake8 .
 
-      - name: 🧪 Pytest - Unit Tests
+      - name: 🧪 Run tests with pytest
         run: |
           source .venv/bin/activate
-          pytest --cov=src --cov-report=xml tests/
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v3
-        with:
-          file: coverage.xml
+          pytest
 
-      - name: 🔍 mypy - Type Checking
+      - name: 📐 Type check with mypy
         run: |
           source .venv/bin/activate
           mypy src/
 
-      - name: 🔒 Bandit - Security Scan
+      - name: 🔒 Security check with bandit
         run: |
           source .venv/bin/activate
           bandit -r src/ -x tests/
