--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
       - name: 🔄 Checkout code
         uses: actions/checkout@v4
 
+      - name: Install system dependencies for Pillow
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libjpeg-dev zlib1g-dev libpng-dev
+
+
       - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
