--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,8 @@
         // ...existing schema configs if any...
     ],
     "python.linting.enabled": true,
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.linting.pylintEnabled": false,
-    "python.linting.flake8Args": [
-        "--max-line-length=88",
-        "--extend-ignore=E203,W503"
-    ],
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     "python.envFile": "${workspaceFolder}/.env"
