--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [tool.black]
 line-length = 88
 target-version = ["py312"]
-skip-string-normalization = false
 
 [tool.isort]
 profile = "black"
 line_length = 88
-include_trailing_comma = true
-multi_line_output = 3
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-lines_after_imports = 2
 
-[tool.flake8]
-max-line-length = 88
-extend-ignore = ["E203", "W503"]  # Compatibility with black
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+# Remove W503 if it's invalid; Ruff handles line breaks differently
+ignore = ["E203"]
