--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,29 +20,29 @@ jobs:
           sudo apt-get install -y libjpeg-dev zlib1g-dev libpng-dev
 
 
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+- name: 🐍 Set up Python
+  uses: actions/setup-python@v5
+  with:
+    python-version: '3.12'
 
-      - name: 📦 Install dependencies
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
+- name: 📦 Install dependencies
+  run: |
+    python -m venv .venv
+    source .venv/bin/activate
+    pip install --upgrade pip
+    pip install -r requirements.txt -r requirements-dev.txt
 
+- name: Run Black check
+  run: |
+    source .venv/bin/activate
+    black . --check
 
-      - name: Run Black check
-        run: |
-          source .venv/bin/activate
-          black . --check
+- name: Run isort
+  run: |
+    source .venv/bin/activate
+    isort . --check-only
 
-      - name: Run isort
-        run: |
-          source .venv/bin/activate
-          isort . --check-only
-
-      - name: Run Ruff Linter
-        run: |
-          ruff check .
+- name: 🧹 Run Ruff
+  run: |
+    source .venv/bin/activate
+    ruff check .
