Enhance Streamlit app with headless mode support, improve data fetching logic, and add debug logging. Update tests to reflect changes in input handling and ensure compatibility with new features.

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,10 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+#debug files
+app_debug.log
+ui_test_debug.log
+
 .venv/
 __pycache__/
 .mypy_cache/
@@ -180,4 +184,5 @@ __pycache__/
 *.egg-info/
 build/
 dist/
+
 
