--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -55,36 +55,36 @@ jobs:
           echo "issue_key=$issue_key" >> $GITHUB_OUTPUT
 
       - name: Update JIRA issue
-        if: steps.extract.outputs.skip != 'true'
+        if: steps.extract.outputs.skip != 'true' && steps.determine.outputs.transition_id != ''
         run: |
           python <<EOF
-          import os
-          import requests
-          import json
+import os
+import requests
+import json
 
-          jira_user = os.environ['JIRA_USER_EMAIL']
-          jira_token = os.environ['JIRA_API_TOKEN']
-          jira_base = os.environ['JIRA_BASE_URL']
-          issue_key = '${{ steps.extract.outputs.issue_key }}'
-          transition_id = '${{ steps.determine.outputs.transition_id }}'
+jira_user = os.environ['JIRA_USER_EMAIL']
+jira_token = os.environ['JIRA_API_TOKEN']
+jira_base = os.environ['JIRA_BASE_URL']
+issue_key = '${{ steps.extract.outputs.issue_key }}'
+transition_id = '${{ steps.determine.outputs.transition_id }}'
 
-          if not transition_id:
-              print('No transition needed.')
-              exit(0)
+if not transition_id:
+    print('No transition needed.')
+    exit(0)
 
-          url = f"{jira_base}/rest/api/3/issue/{issue_key}/transitions"
-          auth = (jira_user, jira_token)
-          headers = {"Accept": "application/json", "Content-Type": "application/json"}
-          payload = json.dumps({"transition": {"id": transition_id}})
+url = f"{jira_base}/rest/api/3/issue/{issue_key}/transitions"
+auth = (jira_user, jira_token)
+headers = {"Accept": "application/json", "Content-Type": "application/json"}
+payload = json.dumps({"transition": {"id": transition_id}})
 
-          response = requests.post(url, headers=headers, auth=auth, data=payload)
+response = requests.post(url, headers=headers, auth=auth, data=payload)
 
-          if response.status_code == 204:
-              print(f"Transitioned {issue_key} successfully to transition ID {transition_id}!")
-          else:
-              print(f"Failed to transition {issue_key}: {response.status_code} {response.text}")
-              exit(1)
-          EOF
+if response.status_code == 204:
+    print(f"Transitioned {issue_key} successfully to transition ID {transition_id}!")
+else:
+    print(f"Failed to transition {issue_key}: {response.status_code} {response.text}")
+    exit(1)
+EOF
         env:
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
