--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -41,13 +41,13 @@ jobs:
 
       - name: Extract JIRA issue key
         id: extract
-run: |
-  if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-    branch_or_pr="${{ github.head_ref }}"
-  else
-    branch_or_pr="${{ github.ref_name }}"
-  fi"
-   issue_key=$(echo "$branch_or_pr" | grep -oE '[A-Z]+-[0-9]+')
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            branch_or_pr="${{ github.head_ref }}"
+          else
+            branch_or_pr="${{ github.ref_name }}"
+          fi
+          issue_key=$(echo "$branch_or_pr" | grep -oE '[A-Z]+-[0-9]+')
 
           if [[ -z "$issue_key" ]]; then
             echo "No JIRA issue key found in branch or PR name. Skipping."
@@ -62,31 +62,40 @@ run: |
         if: steps.extract.outputs.skip != 'true' && steps.determine.outputs.transition_id != ''
         run: |
           python <<EOF
-import os
-import requests
-import json
+run: |
+         python <<EOF
+ import os
+ import requests
+ import json
 
-jira_user = os.environ['JIRA_USER_EMAIL']
-jira_token = os.environ['JIRA_API_TOKEN']
-jira_base = os.environ['JIRA_BASE_URL']
-issue_key = '${{ steps.extract.outputs.issue_key }}'
-transition_id = '${{ steps.determine.outputs.transition_id }}'
+ jira_user = os.environ['JIRA_USER_EMAIL']
+ jira_token = os.environ['JIRA_API_TOKEN']
+ jira_base = os.environ['JIRA_BASE_URL']
+ issue_key = '${{ steps.extract.outputs.issue_key }}'
+ transition_id = '${{ steps.determine.outputs.transition_id }}'
 
-if not transition_id:
-    print('No transition needed.')
-    exit(0)
+ url = f"{jira_base}/rest/api/3/issue/{issue_key}/transitions"
+ auth = (jira_user, jira_token)
+ headers = {"Accept": "application/json", "Content-Type": "application/json"}
+ payload = json.dumps({"transition": {"id": transition_id}})
 
-url = f"{jira_base}/rest/api/3/issue/{issue_key}/transitions"
-auth = (jira_user, jira_token)
-headers = {"Accept": "application/json", "Content-Type": "application/json"}
-payload = json.dumps({"transition": {"id": transition_id}})
+        # Add timeout and catch network errors
+        try:
+            response = requests.post(url, headers=headers, auth=auth, data=payload, timeout=10)
+        except Exception as e:
+            print(f"Request to JIRA failed: {e}, skipping transition")
+            exit(0)
 
-response = requests.post(url, headers=headers, auth=auth, data=payload)
-
-if response.status_code == 204:
-    print(f"Transitioned {issue_key} successfully to transition ID {transition_id}!")
-else:
-    print(f"Failed to transition {issue_key}: {response.status_code} {response.text}")
+        if response.status_code == 204:
+             print(f"Transitioned {issue_key} successfully to transition ID {transition_id}!")
+        else:
+            # Ignore 'invalid transition' errors (e.g. already in target status)
+            if response.status_code == 400:
+                print(f"Transition {transition_id} not valid for {issue_key} (likely already in that status), skipping.")
+                exit(0)
+            print(f"Failed to transition {issue_key}: {response.status_code} {response.text}")
+            exit(1)
+ EOF
     exit(1)
 EOF
         env:
