--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -83,7 +83,7 @@ jobs:
               print(f"Request to JIRA failed: {e}, skipping transition")
               sys.exit(0)
 
-          if response.status_code = 204:
+          if response.status_code == 204:
               print(f"Transitioned {issue_key} successfully to transition ID {transition_id}!")
           elif response.status_code = 400:
               print(f"Transition {transition_id} not valid for {issue_key} (likely already in that status), skipping.")
