CPG-14: fix: replace bash-specific shell syntax in GitHub Actions workflows
[ ... ] test is invalid when && is placed inside the brackets

--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -31,9 +31,11 @@ jobs:
 
           if [ "$event" = "push" ]; then
             transition_id="21"  # In Progress
-          elif [ "$event" = "pull_request" && "${{ github.event.action }}" = "opened" ]; then
+          elif [ "$event" = "pull_request" ] && [ "${{ github.event.action }}" = "opened" ]; then
             transition_id="31"  # In Review
-          elif [ "$event" = "pull_request" && "${{ github.event.action }}" = "closed" && "${{ github.event.pull_request.merged }}" = "true" ]; then
+          elif [ "$event" = "pull_request" ] \
+            && [ "${{ github.event.action }}" = "closed" ] \
+            && [ "${{ github.event.pull_request.merged }}" = "true" ]; then
             transition_id="41"  # Done
           fi
 
