--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -28,30 +28,30 @@ jobs:
         run: |
           transition_id=""
           event="${{ github.event_name }}"
+          action="${{ github.event.action }}"
+          merged="${{ github.event.pull_request.merged }}"
+          branch="${{ github.ref_name }}"
 
-          if [ "$event" = "push" ]; then
+          if [ "$event" = "push" ] && echo "$branch" | grep -qE '^(feature|bugfix|hotfix)/'; then
             transition_id="21"  # In Progress
-          elif [ "$event" = "pull_request" ] && [ "${{ github.event.action }}" = "opened" ]; then
+          elif [ "$event" = "pull_request" ] && [ "$action" = "opened" ]; then
             transition_id="31"  # In Review
-          elif [ "$event" = "pull_request" ] \
-            && [ "${{ github.event.action }}" = "closed" ] \
-            && [ "${{ github.event.pull_request.merged }}" = "true" ]; then
+          elif [ "$event" = "pull_request" ] && [ "$action" = "closed" ] && [ "$merged" = "true" ]; then
             transition_id="41"  # Done
           fi
 
           echo "transition_id=$transition_id" >> $GITHUB_OUTPUT
-
       - name: Extract JIRA issue key
         id: extract
         run: |
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             branch_or_pr="${{ github.head_ref }}"
           else
             branch_or_pr="${{ github.ref_name }}"
           fi
           issue_key=$(echo "$branch_or_pr" | grep -oE '[A-Z]+-[0-9]+')
 
-          if [ -z "$issue_key" ]; then
+          if [[ -z "$issue_key" ]]; then
             echo "No JIRA issue key found in branch or PR name. Skipping."
             echo "skip=true" >> $GITHUB_OUTPUT
             exit 0
@@ -98,3 +98,4 @@ jobs:
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
+
