--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -43,15 +43,20 @@ jobs:
           echo "transition_id=$transition_id" >> $GITHUB_OUTPUT
       - name: Extract JIRA issue key
         id: extract
+        env:
+          SAFE_HEAD_REF: ${{ github.head_ref }}
+          SAFE_REF_NAME: ${{ github.ref_name }}
+          SAFE_EVENT_NAME: ${{ github.event_name }}
         run: |
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            branch_or_pr="${{ github.head_ref }}"
+          if [ "$SAFE_EVENT_NAME" = "pull_request" ]; then
+            branch_or_pr="$SAFE_HEAD_REF"
           else
-            branch_or_pr="${{ github.ref_name }}"
+            branch_or_pr="$SAFE_REF_NAME"
           fi
+
           issue_key=$(echo "$branch_or_pr" | grep -oE '[A-Z]+-[0-9]+')
 
-          if [[ -z "$issue_key" ]]; then
+          if [ -z "$issue_key" ]; then
             echo "No JIRA issue key found in branch or PR name. Skipping."
             echo "skip=true" >> $GITHUB_OUTPUT
             exit 0
@@ -59,7 +64,6 @@ jobs:
 
           echo "Found JIRA issue key: $issue_key"
           echo "issue_key=$issue_key" >> $GITHUB_OUTPUT
-
       - name: Update JIRA issue
         if: steps.extract.outputs.skip != 'true' && steps.determine.outputs.transition_id != ''
         run: |
