CPG-16: bugfix: Add env block to determine transition step to avoid undefined shell variables
- Injected SAFE_EVENT_NAME and SAFE_REF_NAME via env to support shell evaluation
- Prevented exit code 1 errors on merge into develop/main
- Aligns with hardened handling of GitHub context variables across workflow

--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -25,12 +25,15 @@ jobs:
 
       - name: Determine transition
         id: determine
+        env:
+          SAFE_EVENT_NAME: ${{ github.event_name }}
+          SAFE_REF_NAME: ${{ github.ref_name }}
         run: |
           transition_id=""
-          event="${{ github.event_name }}"
+          event="$SAFE_EVENT_NAME"
+          branch="$SAFE_REF_NAME"
           action="${{ github.event.action }}"
           merged="${{ github.event.pull_request.merged }}"
-          branch="${{ github.ref_name }}"
 
           if [ "$event" = "push" ] && echo "$branch" | grep -qE '^(feature|bugfix|hotfix)/'; then
             transition_id="21"  # In Progress
