CPG-16 - chore: apply shell hardening and env unification to jira-status workflow
- Added `set -euo pipefail` to fail fast on unset variables or pipeline errors
- Moved `github.event.action` and `github.event.pull_request.merged` into env block
- Ensured consistent usage of SAFE_* variables across transition logic
- Implements final hardening suggestions from CodeRabbit

--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -28,12 +28,15 @@ jobs:
         env:
           SAFE_EVENT_NAME: ${{ github.event_name }}
           SAFE_REF_NAME: ${{ github.ref_name }}
+          SAFE_ACTION: ${{ github.event.action }}
+          SAFE_PR_MERGED: ${{ github.event.pull_request.merged }}
         run: |
+          set -euo pipefail
           transition_id=""
           event="$SAFE_EVENT_NAME"
           branch="$SAFE_REF_NAME"
-          action="${{ github.event.action }}"
-          merged="${{ github.event.pull_request.merged }}"
+          action="$SAFE_ACTION"
+          merged="$SAFE_PR_MERGED"
 
           if [ "$event" = "push" ] && echo "$branch" | grep -qE '^(feature|bugfix|hotfix)/'; then
             transition_id="21"  # In Progress
