--- a/.github/workflows/jira-status.yml
+++ b/.github/workflows/jira-status.yml
@@ -25,12 +25,18 @@ jobs:
 
       - name: Determine transition
         id: determine
+        env:
+          SAFE_EVENT_NAME: ${{ github.event_name }}
+          SAFE_REF_NAME: ${{ github.ref_name }}
+          SAFE_ACTION: ${{ github.event.action }}
+          SAFE_PR_MERGED: ${{ github.event.pull_request.merged }}
         run: |
+          set -euo pipefail
           transition_id=""
-          event="${{ github.event_name }}"
-          action="${{ github.event.action }}"
-          merged="${{ github.event.pull_request.merged }}"
-          branch="${{ github.ref_name }}"
+          event="$SAFE_EVENT_NAME"
+          branch="$SAFE_REF_NAME"
+          action="$SAFE_ACTION"
+          merged="$SAFE_PR_MERGED"
 
           if [ "$event" = "push" ] && echo "$branch" | grep -qE '^(feature|bugfix|hotfix)/'; then
             transition_id="21"  # In Progress
