--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
   hooks:
   - id: pytest
     name: Run pytest with coverage
-    entry: '".venv\Scripts\coverage.exe" run -m pytest'
+    entry: python -m coverage run -m pytest
     language: system
     types:
     - python
