--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ streamlit==1.24.0
 
 # Dev tools
 bandit>=1.7.7,<2.0.0
-black>=24.0,<25.0
-coverage>=7.5.0,<8.0.0
+black>=25.0.0,<26.0.0
+coverage>=7.4.4,<8.0.0
 isort>=5.13.0,<6.0.0
 mypy>=1.8.0,<2.0.0
-pre-commit>=3.7.0,<4.0.0
-pytest>=7.4.0,<8.0.0
-ruff>=0.4.0
+pre-commit>=4.0.0,<5.0.0
+pytest>=8.0.0,<9.0.0
+ruff>=0.4.0,<1.0.0
