--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-# Core libraries
+# Core app and runtime libraries
 pandas>=2.1.0,<3.0.0
 requests==2.31.0
 plotly==5.18.0
 meteostat==1.6.5
-
-# Data processing and analysis
 numpy>=1.26.0,<2.0.0
+streamlit==1.24.0
 
-# App interface (optional, choose one)
-streamlit==1.24.0  # Use this for Streamlit apps
-# dash  # Use this instead if you prefer Dash for web apps
-# flask  # Use this instead if you prefer Flask for web apps
+# Dev tools
+bandit>=1.7.7,<2.0.0
+black>=25.0.0,<26.0.0
+coverage>=7.4.4,<8.0.0
+isort>=5.13.0,<6.0.0
+mypy>=1.8.0,<2.0.0
+pre-commit>=4.0.0,<5.0.0
+pytest>=8.0.0,<9.0.0
+ruff>=0.4.0,<1.0.0
