CPG-22: Add yamllint to enforce YAML syntax and indentation rules for workflows Summary: - Added yamllint as a pre-commit hook to enforce consistent YAML style, indentation, and syntax rules across the repository. - Created a .yamllint configuration file to align with project standards.
Changes made:
- Updated .pre-commit-config.yaml:
  • Added yamllint repo and hook definition.
  • Ensured all hooks have correct indentation and keys.
- Created and populated .yamllint configuration:
  • Set indentation to 2 spaces and enabled sequence indentation checks.
  • Limited line length to 120 characters (warning level).
  • Enforced maximum 1 consecutive blank line.
  • Required LF line endings and newline at EOF.
  • Disabled YAML key ordering enforcement for flexibility in workflow files.
  • Standardised truthy values to lowercase (true, false, yes, no).
- Fixed all YAML files to pass yamllint:
  • Added missing document start markers (`---`) where required.
  • Corrected indentation issues in workflows (e.g., deploy.yml, docs.yml).
  • Removed extra spaces inside brackets.
  • Fixed trailing spaces and ensured newline at EOF.
  • Corrected syntax errors (e.g., missing `:` in deploy.yml).
  • Adjusted truthy values to conform to .yamllint rules.
  • Cleaned up docker-compose.yml formatting.

Why:
- Ensures YAML consistency across CI/CD workflows and configuration files.
- Prevents subtle indentation errors that could break GitHub Actions or docker-compose.
- Improves maintainability and readability for all contributors.
- Enforces style automatically at commit time, reducing manual review effort.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,53 @@
 repos:
-- repo: https://github.com/psf/black
-  rev: 24.4.2
-  hooks:
-  - id: black
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.4.4
-  hooks:
-  - id: ruff
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.10.0
-  hooks:
-  - id: mypy
-- repo: local
-  hooks:
-  - id: pytest
-    name: Run pytest with coverage
-    entry: python -m coverage run -m pytest
-    language: system
-    types:
-    - python
-    pass_filenames: false
-  - id: pytest-before-push
-    name: Run tests before push
-    entry: bash -c 'coverage run -m pytest && coverage report --fail-under=40'
-    language: system
-    stages:
-    - pre-push
-    types:
-    - python
-    pass_filenames: false
+  - repo: https://github.com/psf/black
+    rev: 24.4.2
+    hooks:
+      - id: black
+
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.4.4
+    hooks:
+      - id: ruff
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.10.0
+    hooks:
+      - id: mypy
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: Run pytest (no coverage gate on commit)
+        entry: python -m pytest --cov=. --cov-branch --cov-report=term
+        language: python
+        additional_dependencies:
+          - pytest
+          - pytest-cov
+          - coverage
+          - pandas
+          - streamlit
+          - meteostat
+        types: [python]
+        pass_filenames: false
+
+      - id: pytest-before-push
+        name: Run tests before push (40% min)
+        entry: python -m pytest --cov=. --cov-branch --cov-report=term --cov-fail-under=40
+        language: python
+        additional_dependencies:
+          - pytest
+          - pytest-cov
+          - coverage
+          - pandas
+          - streamlit
+          - meteostat
+        stages: [pre-push]
+        types: [python]
+        pass_filenames: false
+
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        name: yamllint (YAML style + indentation)
+        args: ["--strict"]
