--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,43 @@
-name: Python CI
+---
+name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
-  build:
+  yaml-lint:
+    name: YAML Lint
     runs-on: ubuntu-latest
-
     steps:
-      - name: 🔄 Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Install system dependencies for Pillow
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libjpeg-dev zlib1g-dev libpng-dev
-
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.x'
+          cache: pip
+      - name: Install yamllint
+        run: python -m pip install --upgrade pip && pip install "yamllint==1.35.1"
+      - name: Run yamllint
+        run: yamllint -c .yamllint .
 
-      - name: 📦 Install dependencies
+  tests:
+    name: Unit tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+          cache: pip
+      - name: Install dependencies
         run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
-
-      - name: Run Black check
-        run: |
-          source .venv/bin/activate
-          black . --check
-
-      - name: Run isort
-        run: |
-          source .venv/bin/activate
-          isort . --check-only
-
-      - name: 🧹 Run Ruff
-        run: |
-          source .venv/bin/activate
-          ruff check .
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run pytest
+        run: python -m pytest --cov=. --cov-branch --cov-report=term
