--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,46 +1,29 @@
-
-name: Build and Deploy Sphinx Docs
+---
+name: Build Docs
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  build-deploy:
+  build-docs:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install sphinx sphinx_rtd_theme sphinxcontrib-plantuml
-
-    - name: Install Java for PlantUML
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-
-    - name: Download PlantUML
-      run: |
-        curl -L -o plantuml.jar https://downloads.sourceforge.net/project/plantuml/plantuml.jar
-
-    - name: Build Sphinx documentation
-      run: |
-        cd docs
-        sphinx-build -b html . _build/html
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs/_build/html
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+          cache: pip
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install sphinx
+      - name: Build documentation
+        run: |
+          cd docs
+          make html
