--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-
+---
+version: '3.9'
 services:
-  climate-compare:
+  app:
     build: .
-    container_name: climate-compare
     ports:
       - "8501:8501"
+    environment:
+      - STREAMLIT_SERVER_PORT=8501
     volumes:
       - .:/app
-    environment:
-      - PYTHONUNBUFFERED=1
-    restart: unless-stopped
