chore(CPG-22): address CodeRabbit review feedback and improve YAML lint/test config
- Switch pytest and pre-push hooks to `language: system` to run in dev env,
  avoiding pre-commit's isolated venv and heavy dependency installs.
- Remove committed .venv311 directory from version control and add venv patterns
  to .gitignore to prevent future accidental commits.
- Add top-level exclude in .pre-commit-config.yaml to skip venv and other cache
  directories during hook runs.
- Remove nbextension loader and other virtualenv-generated assets from repo.
- Update .yamllint:
  - Enable `truthy` rule to enforce boolean values (true/false only).
  - Re-enable `document-start` rule for consistent '---' at file start.
- Adjust yamllint hook to drop `--strict` so warnings remain non-blocking.
- Minor README.md update to reflect linting rules.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
+---
 name: CI
+
 on:
   push:
     branches: [main]
@@ -18,7 +20,7 @@ jobs:
           python-version: '3.x'
           cache: pip
       - name: Install yamllint
-        run: pip install "yamllint==1.35.1"
+        run: python -m pip install --upgrade pip && pip install "yamllint==1.35.1"
       - name: Run yamllint
         run: yamllint -c .yamllint .
 
@@ -38,5 +40,4 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run pytest
-        run: |
-          python -m pytest --cov=. --cov-branch --cov-report=term
+        run: python -m pytest --cov=. --cov-branch --cov-report=term
